--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -37,7 +37,9 @@ body {
   color: $header-text-color;
   display: flex;
   width: 100%;
-
+  &__logo {
+    cursor: pointer;
+  }
   &__wrapper {
     display: flex;
     justify-content: space-between;
@@ -128,27 +130,34 @@ body {
   }
 
   &__links {
-    margin: 20px 13px;
     gap: 60px;
   }
 
   &__link-list {
-    padding: 0;
+    margin: 10px 0 0;
+    padding-left: 0px;
   }
+&__link {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding: 10px;
+  cursor: pointer;
+  border: 2px solid transparent; 
+  border-radius: 10px;
+  transition: border-color 0.3s;
+}
 
-  &__link {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-    margin-bottom: 23px;
-  }
+&__link:hover {
+  border-color: $sidebar-border-color;
+}
 
-  &__link-text {
-    font-weight: 400;
-    font-size: 16px;
-    margin: 0;
-    color: #000000;
-  }
+&__link-text {
+  font-weight: 400;
+  font-size: 16px;
+  margin: 0;
+  color: #000000;
+}
 }
 
 .credit {
@@ -260,7 +269,7 @@ body {
     }
 
     &_special {
-      margin: 0 0 10px 70px;
+      margin: 0 0 10px 90px;
     }
   }
 
@@ -307,7 +316,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 41px;
+    gap: 20px;
     max-width: 890px;
     height: 70px;
     width: 100%;
@@ -475,11 +484,11 @@ body {
       align-items: center;
       justify-content: flex-start;
       cursor: pointer;
-      width: 30px;
-      height: 18px;
+      width: 23px;
+      height: 14px;
 
       span {
-        width: 80%;
+        width: 100%;
         height: 2px;
         background-color: #fff;
         transform: scale(1);
@@ -548,11 +557,6 @@ body {
 
     &__links {
       margin-top: 0;
-    }
-
-    &__link-text,
-    &__block {
-      color: #fff;
     }
 
     &__link-text,
